--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Studiocraft
 author: Bryan Colosky
-year: 2015
+year: 2016
 
 port: 3001
 url: http://studiocraft.cc
 baseurl:
 
-exclude: [package.json, bower.json, Gruntfile.js, node_modules, bower_components, gulp, GitHub Repos, /**/styles, /**/scripts, .bowerrc, .sass-cache, .DS_Store, .gitignore, .editorconfig, .jshintrc, /*.txt, /*.md, /*.ai, /*.pdf, /*.indd, /*.idlk]
+exclude: [package.json, bower.json, Gruntfile.js, node_modules, bower_components, /**/styles, /**/scripts, .bowerrc, .sass-cache, .DS_Store, .gitignore, .editorconfig, .jshintrc, /*.yml, /*.txt, /*.md, /*.ai, /*.pdf, /*.indd, /*.idlk]
