--- a/_data/personas.yml
+++ b/_data/personas.yml
@@ -3,12 +3,13 @@
   demographics:
     location: Denmark
     sex: male
-    relationship_status: Single
-    age-group: 25 - 34
+    spouse: single
+    children: 0
+    birthdate: 1988-11-29 7:15:00 -0500
   education_industry:
     degree: Certificate
     experience: 15
-    industry: Fabrication
+    industry: Fabrication Technician
   digital_profile:
     hardware:
       device: mobile
@@ -19,15 +20,15 @@
       protocol: wifi
       youtube: true
       facebook: true
-  quote: Always looking out for the little guy.
-  persona:
+  persona: Always looking out for the little guy. He is comfortable using a computer and refers to himself as an intermediate Internet user. He is connected via a T1 connection at work and dial-up at home. He uses email extensively and uses the web about 1.5 hours during his work day.
 - name: Inje T. Mold
   id: 9
   demographics:
     location: Italy
     sex: female
-    relationship_status: Single
-    age-group: 35 - 44
+    spouse: single
+    children: 0
+    birthdate: 1976-01-17 23:50:00 -0500
   education_industry:
     degree: BA
     experience: 15
@@ -42,15 +43,15 @@
       protocol: wifi
       youtube: true
       facebook: true
-  quote: Knows her pixels. Quite affectionate and outgoing.
-  persona:
+  persona: Knows her pixels. Quite affectionate and outgoing. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 - name: Stepan M. Hertz
   id: 3
   demographics:
     location: Austria
     sex: male
-    relationship_status: Married
-    age-group: 45 - 65
+    spouse: married
+    children: 3
+    birthdate: 1964-10-11 06:50:00 -0500
   education_industry:
     degree: Phd MD
     experience: 30
@@ -65,5 +66,4 @@
       protocol: wifi
       youtube: true
       facebook: true
-  quote: Passionately cares for his patients, but balances his time with family.
-  persona:
+  persona: Passionately cares for his patients, but balances his time with family. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
