--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ year: 2016
 
 port: 3001
 url: http://studiocraft.cc
-baseurl:
+baseurl: /
 
 exclude: [package.json, bower.json, Gruntfile.js, node_modules, bower_components, /**/styles, /**/scripts, .bowerrc, .sass-cache, .DS_Store, .gitignore, .editorconfig, .jshintrc, /*.yml, /*.txt, /*.md, /*.ai, /*.pdf, /*.indd, /*.idlk]
