--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,6 @@ port: 3001
 url: http://studiocraft.cc
 baseurl:
 
-exclude: [package.json, bower.json, Gruntfile.js, node_modules, bower_components, /**/styles, /**/scripts, .bowerrc, .sass-cache, .DS_Store, .gitignore, .editorconfig, .jshintrc, /*.yml, /*.txt, /*.md, /*.ai, /*.pdf, /*.indd, /*.idlk]
+permalink: pretty
+
+exclude: [package.json, bower.json, Gruntfile.js, gulpfile.js, node_modules, bower_components, /**/styles, /**/scripts, .bowerrc, .sass-cache, .DS_Store, .gitignore, .editorconfig, .jshintrc, /*.yml, /*.txt, /*.md, /*.psd, /*.ai, /*.pdf, /*.indd, /*.idlk]
