--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Studiocraft
 author: Bryan Colosky
 year: 2016
-about: a user-centric independent design consultancy focusing on simplicity. Our creative process blends visual design, user experience, and content strategy to create relevant, brand-driven experiences that bring brands closer to their customers.
+about: a user-centric independent design consultancy focusing on simplicity. Our process blends visual design, user experience, and content strategy to create relevant, brand-driven experiences that brings your brand closer to their customers.
 
 collections:
   posts:
